<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">




    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="320dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@font/roboto_bold"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#9948EA"
        android:text="@string/Login"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />

    <TextView
        android:id="@+id/signUpHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUpHere"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Password"
        android:fontFamily="@font/roboto_bold"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>