<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">


...
        android:layout_marginTop="68dp"
        android:backgroundTint="#9948EA"
        android:text="@string/LogoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRoutinesButton" />

    <Button
        android:id="@+id/homeRoutinesButton"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
...
